--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@100;200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+*{
+  font-family: 'Poppins', sans-serif;
+}
 .login {
     min-height: 100vh;
   }
@@ -17,3 +25,64 @@
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
   }
+
+.padding{
+  padding-left: 10vw !important;
+  padding-right: 10vw !important;
+}
+
+
+  /* for home section */
+section{
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+section #text{
+  position: absolute;
+  color: #094b65;
+  font-size: 10vw;
+  text-align: center;
+  line-height: 0.55em;
+
+}
+section #text .text1{
+  font-size: 0.30em;
+  letter-spacing: 2px;
+  font-weight: 400;
+  font-family: 'Indie Flower', cursive;
+}
+section #text .text2{
+  font-family: 'Permanent Marker', cursive;
+}
+section img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+
+
+
+.sec{
+  position: relative;
+  padding: 10vw;
+  background: #094b65;
+}
+
+.sec h2{
+  font-size: 3.5em;
+  color: #fff;
+  margin-bottom: 10px;
+}
+.sec p{
+  font-size: 1em;
+  color: #fff;
+}
+
