--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,21 +30,33 @@
   padding-left: 10vw !important;
   padding-right: 10vw !important;
 }
-
+ .padding{
+  z-index: 10;
+}
 
   /* for home section */
 section{
   position: relative;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+section::before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to top, #094b65,transparent);
+  z-index: 10;
+}
 section #text{
   position: absolute;
   color: #094b65;
-  font-size: 10vw;
+  font-size: 18vw;
   text-align: center;
   line-height: 0.55em;
 
