--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,7 +11,7 @@
 
   /* color/warna */
 
-  --hue-color:197;
+  --hue-color:214;
 
   /* hsl color */
   --first-color:hsl(var(--hue-color),84%,22%);
@@ -70,10 +70,30 @@
 }
 
 body{
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  background-color:var(--body-color) ;
-  color: var(--text-color);
+  overflow-x: hidden;
+  font-family: var(--body-font) !important;
+  font-size: var(--normal-font-size) !important;
+  background-color:var(--body-color)!important ;
+  color: var(--text-color)!important;
+}
+
+h1,h2,h3,h4{
+  color:var(--title-color) !important;
+  font-weight: var(--font-semi-bold) !important;
+}
+
+
+/* reusable css */
+.sectiom-title{
+  font-size:var(--h1-font-size) !important;
+}
+.section-subtitle{
+  display: block;
+  font-size: var(--small-font-size) !important;
+  margin-bottom: var(--mb-3);
+}
+.section-title,.section-subtitle{
+  text-align: center !important;
 }
 .login {
     min-height: 100vh;
@@ -104,22 +124,23 @@ body{
 }
 
   /* for home section */
-section{
+section.home{
   position: relative;
   width: 100%;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
-section::before{
+section.home::before{
   content: '';
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to top, #094b65,transparent);
+  background: linear-gradient(to top, #ffff,transparent);
   z-index: 10;
 }
 section #text{
@@ -154,7 +175,7 @@ section img{
 .sec{
   position: relative;
   padding: 10vw;
-  background: #094b65;
+  background: #ffff;
 }
 
 .sec h2{
