--- a/public/css/main.css
+++ b/public/css/main.css
@@ -440,7 +440,10 @@ column-gap: 1.5rem;
   outline: none;
   padding: .25rem .5rem .5rem 0;
 }
-
+input:-internal-autofill-selected{
+  background-color: var(--first-color-alt) !important;
+ color: var(--first-color-alt) !important;
+}
 
 /* footer */
 /* .footer{
